--- a/yehe_doc/网络与CDN/负载均衡/操作指南/后端服务器/跨地域绑定2.0（新版）_intl_en.md
+++ b/yehe_doc/网络与CDN/负载均衡/操作指南/后端服务器/跨地域绑定2.0（新版）_intl_en.md
@@ -1,10 +1,11 @@
 CLB supports binding CVM instances across regions through CCN, allowing you to select real servers of different regions and bind CLB instances to them across VPCs or regions.
-This feature is currently in beta test. To try it out, [submit a ticket](https://intl.cloud.tencent.com/apply/p/mzjxboiv2yq) for application.
-
+This feature is currently in beta test. If you want to try it out, please [submit an application](https://intl.cloud.tencent.com/apply/p/mzjxboiv2yq).
 >?
 >- Cross-region CVM binding is currently not supported for classic CLB instances.
->- This feature is available only to bill-by-IP accounts. To check your account type, see [Checking Account Type](https://intl.cloud.tencent.com/document/product/684/15246).
+>- This feature is available only to bill-by-IP accounts. To check your account type, please see [Checking Account Type](https://intl.cloud.tencent.com/document/product/684/15246).
 >- Cross-region binding 2.0 and hybrid cloud deployment do not support [Allow Traffic by Default in security groups](https://intl.cloud.tencent.com/document/product/214/14733), for which you need to allow the client IP and service port on the real server.
+>- CLB instances cannot be bound with each other in cross-region binding 2.0 and hybrid cloud deployment scenarios.
+>
 
 
 ## Use Cases
@@ -13,19 +14,17 @@ This feature is currently in beta test. To try it out, [submit a ticket](https:/
 ![](https://main.qcloudimg.com/raw/d8f7b0231480b5687a455a74a7334660.png)
 
 ## Differences from Legacy Cross-region Binding
-<table >
-<tr >
+<table>
+<tr>
 <th>Comparison Item</th>
 <th>Cross-region Binding 2.0 (New)</th>
 <th>Cross-region Binding 1.0 (Legacy)</th>
 </tr>
-
 <tr>
 <td width="20%" >Whether binding to services in multiple regions at the same time is supported</td>
 <td width="40%">Yes:<ul><li>On the new version, a CLB instance can be bound to CVM instances in multiple regions at the same time.</li><li>For example, a CLB instance in the Beijing region can be bound to CVM instances in the Beijing and Shanghai regions at the same time.</li></ul></td>
 <td width="40%">No:<ul><li>On the legacy version, a CLB instance can be bound to CVM instances in only one region.</li><li>For example, a CLB instance in the Beijing region can be bound to CVM instances in the Shanghai region, but cannot be bound to those in the Beijing and Shanghai regions at the same time.</li></ul></td>
 </tr>
-
 <tr>
 <td >Whether intra-region binding can be switched back after cross-region binding is used</td>
 <td>Yes:<ul><li>On the new version, the original intra-region binding can be switched back after cross-region binding is used.</li></ul></td>
@@ -41,21 +40,22 @@ This feature is currently in beta test. To try it out, [submit a ticket](https:/
 <td>Intra-region binding:<ul><li>If a CLB instance is bound to a CVM instance in the same region, when the CVM instance is released, the CLB instance will be automatically unbound from it.</li></ul>Cross-region binding:<ul><li>If a CLB instance is bound to a CVM instance in another region, when the CVM instance is released, the CLB instance will not be automatically unbound from it, and you need to unbind them manually.</li></ul></td>
 <td>Intra-region binding:<ul><li>If a CLB instance is bound to a CVM instance in the same region, when the CVM instance is released, the CLB instance will be automatically unbound from it.</li></ul>Cross-region binding:<ul><li>If a CLB instance is bound to a CVM instance in another region, when the CVM instance is released, the CLB instance will be automatically unbound from it.</li></ul></td>
 </tr>
-
 <tr>
 <td >Whether the price is favorable</td>
 <td>It is <a href="https://intl.cloud.tencent.com/document/product/1003/30053">billed in CCN</a>. The costs are controlled in a fine-grained manner, which leads to lower prices.</td>
+<td>It is billed by the <a href="">daily 95th percentile bandwidth</a>.</td>
+</tr>
 </table>
 
 ## Prerequisites
 1. You have submitted the application for beta test eligibility. For cross-region binding in the Chinese mainland, [submit a ticket](https://intl.cloud.tencent.com/apply/p/mzjxboiv2yq) for application. For cross-region binding outside the Chinese mainland, [contact your Tencent Cloud rep](https://intl.cloud.tencent.com/contact-sales).
-2. You have created a CLB instance. For more information, see [Creating CLB Instances](https://intl.cloud.tencent.com/document/product/214/6149).
-3. You have created a CCN instance. For more information, see [Creating a CCN Instance](https://intl.cloud.tencent.com/document/product/1003/30062).
-4. Associate the target VPC with the created CCN instance. For more information, see [Associating Network Instances](https://intl.cloud.tencent.com/document/product/1003/30064).
+2. You have created a CLB instance. For more information, please see [Creating CLB Instances](https://intl.cloud.tencent.com/document/product/214/6149).
+3. You have created a CCN instance. For more information, please see [Creating a CCN Instance](https://intl.cloud.tencent.com/document/product/1003/30062).
+4. Associate the target VPC with the created CCN instance. For more information, please see [Associating Network Instances](https://intl.cloud.tencent.com/document/product/1003/30064).
 
 
 ## Directions
-1. Log in to the [CLB console](https://console.cloud.tencent.com/loadbalance).
+1. Log in to the [CLB Console](https://console.cloud.tencent.com/loadbalance).
 2. On the **Instance Management** page, click the ID of the target CLB instance.
 3. On the **Basic Info** tab of the **Real Server** section, click **Configure** to bind a private IP of another VPC.
 ![](https://main.qcloudimg.com/raw/acf991291fa2ad11f9f12db37af7d88d.png)
@@ -63,8 +63,9 @@ This feature is currently in beta test. To try it out, [submit a ticket](https:/
 ![](https://main.qcloudimg.com/raw/bf91924afcf5eeccd025539871dbad2b.png)
 5. In the **Real Server** section on the **Basic Info** tab, you can see that **Binding IP of Other VPCs** is enabled, which indicates that in-cloud IPs can be bound to.
 ![](https://main.qcloudimg.com/raw/c7b47d1dd6825af08b814d56a9b30c88.png)
-6. On the instance details page, open the **Listener Management** tab, and bind a real server to the CLB instance in the listener configuration section. For more information, see [Managing Real Servers](https://intl.cloud.tencent.com/document/product/214/6156).
-7. In the pop-up box, select **Other VPC**, click **CVM**, select one or multiple target CVM instances, enter the forwarding port and weight, and click **Confirm**. For more information on ports, see [Server Common Port](https://intl.cloud.tencent.com/document/product/213/12451).
-![](https://qcloudimg.tencent-cloud.cn/raw/a46d87854a7f67bbc1935331f9ece2e9.png)
+6. On the instance details page, open the **Listener Management** tab, and bind a real server to the CLB instance in the listener configuration section. For more information, please see [Managing Real Servers](https://intl.cloud.tencent.com/document/product/214/6156).
+7. In the pop-up box, select **Other VPC**, click **CVM**, select one or multiple target CVM instances, enter the forwarding port and weight, and click **Confirm**. For more information on ports, please see [Server Common Port](https://intl.cloud.tencent.com/document/product/213/12451).
+<img src="https://qcloudimg.tencent-cloud.cn/raw/a46d87854a7f67bbc1935331f9ece2e9.png" width="80%">
 8. Now in the **Bound Real Servers** section, you can view the bound CVM instances of other regions.
-![]()
+<img src="" width="70%">
+
