--- a/yehe_doc/网络与CDN/负载均衡/操作指南/后端服务器/跨地域绑定2.0（新版）_intl_zh.md
+++ b/yehe_doc/网络与CDN/负载均衡/操作指南/后端服务器/跨地域绑定2.0（新版）_intl_zh.md
@@ -5,6 +5,8 @@
 >- 跨地域互联绑定云服务器暂不支持传统型负载均衡。
 >- 该功能仅标准账户类型支持。若您无法确定账户类型，请参见 [判断账户类型](https://intl.cloud.tencent.com/document/product/684/15246)。
 >- 跨地域绑定2.0和混合云部署，不支持[ 安全组默认放通](https://intl.cloud.tencent.com/document/product/214/14733)，请在后端服务器上放通 Client IP 和服务端口。
+>- 跨地域绑定2.0和混合云部署不支持绑定其它负载均衡实例（即不支持 CLB 绑定 CLB ）。
+>
 
 
 ## 应用场景
@@ -24,7 +26,6 @@
 <td width="40%">支持：<ul><li>新版跨地域绑定 CLB 支持同时绑定多个地域的 CVM。</li><li>例如北京的 CLB 可以同时绑定北京和上海的 CVM。</li></ul></td>
 <td width="40%">不支持：<ul><li>旧版跨地域绑定 CLB 仅能绑定一个地域的 CVM。</li><li>例如北京的 CLB 可以绑定上海的 CVM，但北京的 CLB 不能同时绑定北京和上海的 CVM。</li></ul></td>
 </tr>
-
 <tr>
 <td >是否支持跨域后改回不跨域</td>
 <td>支持：<ul><li>新版跨地域绑定支持修改回原来的同地域绑定。</li></ul></td>
@@ -40,11 +41,11 @@
 <td>同地域绑定时自动解绑：<ul><li>CLB 绑定同地域的 CVM，若该 CVM 被释放，则 CLB 会自动与该 CVM 解绑。</li></ul>跨地域绑定时自动解绑：<ul><li>CLB 跨地域绑定 CVM，若该 CVM 被释放，则 CLB 不会自动解除与该 CVM 的绑定关系，需手动解绑。</li></ul></td>
 <td>同地域绑定时自动解绑：<ul><li>CLB 绑定同地域的 CVM，若该 CVM 被释放，则 CLB 会自动与该 CVM 解绑。</li></ul>跨地域绑定时自动解绑：<ul><li>CLB 跨地域绑定 CVM，若该 CVM 被释放，则 CLB 会自动与该 CVM 解绑。</li></ul></td>
 </tr>
-
 <tr>
 <td >价格是否优惠</td>
 <td>通过<a href="https://intl.cloud.tencent.com/document/product/1003/30053">云联网计费</a>，会进行精细化成本核算，价格更低。</td>
 <td><a href="">日95计费</a>。</td>
+</tr>
 </table>
 
 ## 前提条件
@@ -65,7 +66,7 @@
 ![](https://main.qcloudimg.com/raw/c7b47d1dd6825af08b814d56a9b30c88.png)
 6. 在实例详情页面，单击“监听器管理”页签，在配置监听器模块中，为负载均衡实例绑定后端服务，详情请参见 [添加负载均衡后端云服务器](https://intl.cloud.tencent.com/document/product/214/6156)。
 7. 在弹出的“绑定后端服务”对话框中，选择“其他 VPC”，单击**云服务器**，选择需要关联的云服务器（可多选），并填写相关云服务器需要被转发的端口与权重，详情请参见 [服务器常用端口](https://intl.cloud.tencent.com/document/product/213/12451)，单击**确认**。
-![](https://qcloudimg.tencent-cloud.cn/raw/a46d87854a7f67bbc1935331f9ece2e9.png)
+<img src="https://qcloudimg.tencent-cloud.cn/raw/a46d87854a7f67bbc1935331f9ece2e9.png" width="80%">
 8. 返回“已绑定后端服务”区域可以查看已绑定的其他地域的 CVM。
-![]()
+<img src="" width="70%">
 
